# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "susi-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "susi_core"
crate-type = ["cdylib"]

[dependencies]
aead = "0.5.2"
aes-gcm = { version = "0.10.3", features = ["stream"] }
argon2 = { version = "0.5.3", features = ["std"] }
filepath = "0.1.2"
libc = "0.2"
once_cell = "1.19.0"
rand = "0.8.5"
tempfile = "3.10.1"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
