# This Source Code Form is subject to the terms of the
# Mozilla Public License, v. 2.0. If a copy of the MPL was not distributed
# with this file, You can obtain one at http://mozilla.org/MPL/2.0/.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "susi-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "susi_core"
crate-type = ["cdylib"]

[dependencies]
aead = { version = "0.5.2", features = ["alloc"]}
aes-gcm = { version = "0.10.3", features = ["stream"] }
argon2 = { version = "0.5.3", features = ["std"] }
filepath = "0.1.2"
hmac = "0.12.1"
libc = "0.2"
once_cell = "1.19.0"
rand = "0.8.5"
sha2 = "0.10.8"
tempfile = "3.10.1"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
